--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^7.0.36",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-daterange-picker": "^0.6.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
